[package]
name = "cs_epic_wallet_api"
version = "1.0.0" # 1.0.0 = 3.6.0
authors = ["Epic Developers <info@epiccash.com>", "Likho", "sneurlax"]
description = "Epic Wallet API"
license = "Apache-2.0"
repository = "https://github.com/cypherstack/epic-wallet"
exclude = ["**/*.epic", "**/*.epic2"]
edition = "2021"

[dependencies]
failure = "0.1"
failure_derive = "0.1"
log = "0.4"
uuid = { version = "0.7", features = ["serde", "v4"] }
serde = "1"
rand = "0.5"
serde_derive = "1"
serde_json = "1"
easy-jsonrpc-mw = "0.5.3"
chrono = { version = "0.4.4", features = ["serde"] }
ring = "0.16.20"
base64 = "0.9"
ed25519-dalek = "=1.0.0-pre.1"

epic_wallet_libwallet = { package = "cs_epic_wallet_libwallet", path = "../libwallet", version = "^1.0.0" }
epic_wallet_config = { package = "cs_epic_wallet_config", path = "../config", version = "^1.0.0" }
epic_wallet_impls = { package = "cs_epic_wallet_impls", path = "../impls", version = "^1.0.0" }
epic_wallet_util = { package = "cs_epic_wallet_util", path = "../util", version = "^1.0.0" }

[dev-dependencies]
serde_json = "1"
tempfile = "3.0.7"
