[package]
name = "cs_epic_wallet_config"
version = "1.0.0" # 1.0.0 = 3.6.0
authors = ["Epic Developers <info@epiccash.com>", "Likho", "sneurlax"]
description = "Configuration for epic wallet, a simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/cypherstack/epic-wallet"
workspace = ".."
edition = "2021"

[dependencies]
rand = "0.5"
serde = "1"
serde_derive = "1"
toml = "0.4"
dirs = "1.0.3"

epic_wallet_util = { package = "cs_epic_wallet_util", version = "1.0.0" }

[dev-dependencies]
pretty_assertions = "0.5.1"
