[package]
name = "stack_epic_wallet_util"
version = "3.3.4"
authors = ["Epic Developers <epiccash@brickabode.com>"]
description = "Util, for generic utilities and to re-export epic crates"
license = "Apache-2.0"
repository = "https://github.com/cypherstack/epic-wallet"
workspace = ".."
edition = "2018"

[dependencies]
rand = "0.5"
serde = "1"
serde_derive = "1"
toml = "0.4"
dirs = "1.0.3"

# For Release
stack_epic_core = "3.3.2"
stack_epic_keychain = "3.3.2"
stack_epic_chain = "3.3.2"
stack_epic_util = "3.3.2"
stack_epic_api = "3.3.2"
stack_epic_store = "3.3.2"

[dev-dependencies]
pretty_assertions = "0.5.1"
